infra/K8S/issue-stats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-stats-svc
spec:
  selector:
    matchLabels:
      app: issue-stats-svc
  template:
    metadata:
      labels:
        app: issue-stats-svc
    spec:
      containers:
        - name: issue-stats-svc
          image: w6731827/issue-stats-svc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: issue-stats-clusterip
spec:
  type: ClusterIP
  selector:
    app: issue-stats-svc
  ports:
    - port: 80
      targetPort: 80
      name: web
