infra/K8S/project-issue-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-issue-svc
spec:
  selector:
    matchLabels:
      app: project-issue-svc
  template:
    metadata:
      labels:
        app: project-issue-svc
    spec:
      containers:
        - name: project-issue-svc
          image: w6731827/project-issue-svc:latest
          ports:
            - containerPort: 80
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: project-issue-clusterip
spec:
  type: ClusterIP
  selector:
    app: project-issue-svc
  ports:
    - port: 80
      targetPort: 80
      name: web
