infra/K8S/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc
spec:
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
        - name: user-svc
          image: w6731827/user-svc:latest
          ports:
            - containerPort: 80
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip
spec:
  type: ClusterIP
  selector:
    app: user-svc
  ports:
    - port: 80
      targetPort: 80
      name: web
