infra/K8S/webapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-svc
spec:
  selector:
    matchLabels:
      app: webapp-svc
  template:
    metadata:
      labels:
        app: webapp-svc
    spec:
      containers:
        - name: webapp-svc
          image: w6731827/web-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: webapp-svc
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-np
spec:
  type: NodePort
  selector:
    app: webapp-svc
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30005
