infra/K8S/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.issuetracker.local
        - api.issuetracker.local
        - id.issuetracker.local
      secretName: issuetracker-app-tls
  rules:
    - host: app.issuetracker.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.issuetracker.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-clusterip
                port:
                  number: 80
    - host: id.issuetracker.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: identity-clusterip
                port:
                  number: 80
